# rvideo

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml
public/: manifest.json  sw.js
rust-backend/: Cargo.toml  Dockerfile  README.md
rust-backend/src/: auth.rs  db.rs  frontend.rs  main.rs  routes.rs  types.rs
rust-backend/src/frontend/: assets.rs  render.rs  scripts.rs
rust-backend/src/frontend/pages/: home.rs  mod.rs  shared.rs  view.rs
rust-backend/src/frontend/pages/account/: admin.rs  login.rs  mod.rs  premium_settings.rs  settings.rs
rust-backend/src/frontend/pages/media/: detail.rs  mod.rs  player.rs  premium.rs
