[package]
name = "rvideo-rust-backend"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
bcrypt = "0.19"
chrono = { version = "0.4", features = ["clock", "serde"] }
futures-util = "0.3"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["brotli", "deflate", "gzip", "json", "rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "macros", "mysql", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
urlencoding = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
